Added flowLabel, excludeLabelFromRouter flow fields + relabel output

--- a/config/crd/bases/logging.banzaicloud.io_clusteroutputs.yaml
+++ b/config/crd/bases/logging.banzaicloud.io_clusteroutputs.yaml
@@ -4833,6 +4833,13 @@ spec:
                   ttl:
                     type: integer
                 type: object
+              relabel:
+                properties:
+                  label:
+                    type: string
+                required:
+                - label
+                type: object
               s3:
                 properties:
                   acl:
@@ -10818,6 +10825,13 @@ spec:
                     type: string
                   ttl:
                     type: integer
+                type: object
+              relabel:
+                properties:
+                  label:
+                    type: string
+                required:
+                - label
                 type: object
               s3:
                 properties:
