--- a/config/crd/bases/logging.banzaicloud.io_clusterflows.yaml
+++ b/config/crd/bases/logging.banzaicloud.io_clusterflows.yaml
@@ -39,6 +39,8 @@ spec:
             type: object
           spec:
             properties:
+              excludeLabelFromRouter:
+                type: boolean
               filters:
                 items:
                   properties:
@@ -967,6 +969,8 @@ spec:
                       type: object
                   type: object
                 type: array
+              flowLabel:
+                type: string
               globalOutputRefs:
                 items:
                   type: string
@@ -1062,6 +1066,8 @@ spec:
             type: object
           spec:
             properties:
+              excludeLabelFromRouter:
+                type: boolean
               filters:
                 items:
                   properties:
@@ -1990,6 +1996,8 @@ spec:
                       type: object
                   type: object
                 type: array
+              flowLabel:
+                type: string
               globalOutputRefs:
                 items:
                   type: string
