--- a/config/crd/bases/logging.banzaicloud.io_outputs.yaml
+++ b/config/crd/bases/logging.banzaicloud.io_outputs.yaml
@@ -4748,6 +4748,13 @@ spec:
                   ttl:
                     type: integer
                 type: object
+              relabel:
+                properties:
+                  label:
+                    type: string
+                required:
+                - label
+                type: object
               s3:
                 properties:
                   acl:
@@ -10727,6 +10734,13 @@ spec:
                     type: string
                   ttl:
                     type: integer
+                type: object
+              relabel:
+                properties:
+                  label:
+                    type: string
+                required:
+                - label
                 type: object
               s3:
                 properties:
